--- a/apps/royalfut/app/[locale]/blog/[post]/page.module.scss
+++ b/apps/royalfut/app/[locale]/blog/[post]/page.module.scss
@@ -24,7 +24,7 @@
   gap: 16px;
 
   li {
-    // display: flex;
+    display: initial;
     // flex-direction: column;
     // gap: 16px;
     padding-top: 12px;
@@ -52,6 +52,7 @@
   padding-right: 6px;
 }
 .em {
+  display: initial;
   padding-left: 6px;
   padding-right: 6px;
 }
